--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     },
     "homepage": "https://github.com/toNy5oo/movie_api#readme",
     "dependencies": {
-        "body-parser": "^1.19.2",
+        "body-parser": "^1.20.0",
         "express": "^4.17.3",
+        "mongoose": "^6.2.10",
         "morgan": "^1.10.0"
     },
     "devDependencies": {
