--- a/package.json
+++ b/package.json
@@ -25,8 +25,12 @@
     "dependencies": {
         "body-parser": "^1.20.0",
         "express": "^4.17.3",
+        "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.2.10",
-        "morgan": "^1.10.0"
+        "morgan": "^1.10.0",
+        "passport": "^0.5.2",
+        "passport-jwt": "^4.0.0",
+        "passport-local": "^1.0.0"
     },
     "devDependencies": {
         "nodemon": "^2.0.15"
